fix for overflowing text in radio-button (#803)

--- a/apps/concierge_site/assets/css/v2/_forms.scss
+++ b/apps/concierge_site/assets/css/v2/_forms.scss
@@ -133,6 +133,13 @@ label.form__label--inline-divider {
 }
 
 .btn__radio--toggle {
+
+  white-space: normal;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
   div, svg {
     pointer-events: none;
   }
